--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opensumi/ext-infra",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0",
   "description": "Infra for opensumi extension",
   "private": true,
   "engines": {
