--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,8 +16,10 @@
     "compile": "tsc -p tsconfig.json",
     "watch": "tsc -w -p tsconfig.json",
     "prepublishOnly": "npm run compile",
-    "postinstall": "npm run compile && node lib/postinstall.js",
     "test": "jest"
+  },
+  "engines": {
+    "node": ">=10.15.0"
   },
   "dependencies": {
     "chalk": "^3.0.0",
@@ -25,35 +27,46 @@
     "denodeify": "^1.2.1",
     "ejs": "^2.7.4",
     "execa": "^4.0.0",
+    "file-loader": "^5.0.2",
     "formstream": "^1.1.0",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
+    "ice-npm-utils": "^1.3.0",
     "import-fresh": "^3.3.0",
     "inquirer": "^7.0.0",
     "json5": "^2.1.3",
     "kopy": "^8.0.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
     "lodash": "^4.17.15",
     "merge-options": "^3.0.4",
     "mime": "^1.3.4",
     "open": "^7.0.2",
     "ora": "^4.0.3",
+    "parse-semver": "^1.1.1",
     "react": "^16.12.0",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
+    "read": "^1.0.7",
+    "rimraf": "4.4.0",
     "semver": "^6.3.0",
     "shell-path": "^2.1.0",
     "strip-json-comments": "^3.1.1",
+    "style-loader": "^1.1.2",
+    "ts-loader": "^8.4.0",
+    "typescript": "^4.7.4",
     "untildify": "^4.0.0",
     "url-join": "^4.0.1",
     "urllib": "^2.34.2",
+    "vscode-nls-dev": "^3.3.2",
+    "webpack": "^4.41.5",
+    "webpack-cli": "3.3.1",
+    "webpack-merge": "^5.1.0",
     "ws": "^7.3.1",
     "yaml": "^1.8.3",
     "yauzl": "^2.10.0",
     "yazl": "^2.5.1",
     "zip": "^1.2.0"
-  },
-  "engines": {
-    "node": ">=10.15.0"
   },
   "devDependencies": {
     "@types/ejs": "^3.0.2",
@@ -61,6 +74,7 @@
     "@types/inquirer": "^6.5.0",
     "@types/jest": "^26.0.14",
     "@types/react-dev-utils": "^9.0.4",
+    "@types/rimraf": "^4.0.5",
     "@types/semver": "^7.1.0",
     "@types/webpack": "^4.41.11",
     "@types/ws": "^7.2.6",
@@ -68,24 +82,10 @@
     "@types/yup": "^0.28.0",
     "css-loader": "^3.4.0",
     "eslint": "^6.5.1",
-    "file-loader": "^5.0.2",
-    "fs-extra": "^8.1.0",
     "get-stream": "^6.0.0",
     "jest": "^26.4.2",
-    "less": "^3.12.2",
-    "ice-npm-utils": "^1.3.0",
-    "less-loader": "^7.0.2",
-    "parse-semver": "^1.1.1",
     "pkg": "^4.4.0",
-    "read": "^1.0.7",
-    "style-loader": "^1.1.2",
-    "ts-loader": "^8.4.0",
-    "typescript": "^4.7.4",
-    "ts-jest": "^26.4.0",
-    "vscode-nls-dev": "^3.3.2",
-    "webpack": "^4.41.5",
-    "webpack-cli": "3.3.1",
-    "webpack-merge": "^5.1.0"
+    "ts-jest": "^26.4.0"
   },
   "__npminstall_done": false
 }
